--- a/scss/modules/emojis/_base.scss
+++ b/scss/modules/emojis/_base.scss
@@ -3,6 +3,10 @@
   box-shadow: 0 2px 10px $color-shadow-dark;
   color: $base-font-color;
 
+  #emoji_menu_items_scroller {
+    background: $color-base !important;
+  }
+
   h3 {
     background: rgba($color-base, 0.95);
   }
