--- a/css/variants/black-monospaced.css
+++ b/css/variants/black-monospaced.css
@@ -914,6 +914,7 @@
   #whats_new_tab .flex_heading_controls label { color: #949494; }
   #whats_new_updates h3 a { color: #e6e6e6 !important; }
   #emoji_menu { background: #000; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); color: #e6e6e6; }
+  #emoji_menu #emoji_menu_items_scroller { background: #222 !important; }
   #emoji_menu h3 { background: rgba(34, 34, 34, 0.95); }
   #emoji_menu #emoji_div_default_rxns { border-bottom: 1px solid #363636; }
   #emoji_menu #emoji_preview_text { background: #000; color: #e6e6e6; }
