--- a/css/variants/midnight-blue-monospaced.css
+++ b/css/variants/midnight-blue-monospaced.css
@@ -914,6 +914,7 @@
   #whats_new_tab .flex_heading_controls label { color: #1793d1; }
   #whats_new_updates h3 a { color: #00b9f2 !important; }
   #emoji_menu { background: #000; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); color: #00b9f2; }
+  #emoji_menu #emoji_menu_items_scroller { background: #000 !important; }
   #emoji_menu h3 { background: rgba(0, 0, 0, 0.95); }
   #emoji_menu #emoji_div_default_rxns { border-bottom: 1px solid #111; }
   #emoji_menu #emoji_preview_text { background: #000; color: #00b9f2; }
