Restore monkey scroller, this is used for Firefox (fixes #71)

--- a/scss/pages/_website.scss
+++ b/scss/pages/_website.scss
@@ -876,6 +876,7 @@ ul.sidebar_nav li {
   color: $base-link-color-active;
 }
 
+.menu #monkey_scroll_wrapper_for_menu_items_scroller,
 .plan_availability,
 .modal-backdrop,
 .icon {
