Correct text color for post snippets (fixes #70)

--- a/scss/modules/messaging/_code.scss
+++ b/scss/modules/messaging/_code.scss
@@ -13,7 +13,7 @@ code {
   background: $color-shade-darkest;
 
   pre {
-    color: $base-font-color;
+    color: $base-font-color !important;
   }
 }
 
