Add style for new modal notes

--- a/scss/modules/modals/_base.scss
+++ b/scss/modules/modals/_base.scss
@@ -10,7 +10,8 @@
 }
 
 .modal_input_note,
-.modal_input_note_full_width {
+.modal_input_note_full_width,
+.input_note_special {
   color: $color-highlight;
 }
 
