Add styles for new channel notice (fixes #63)

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -35,6 +35,7 @@
   @import "modules/messaging/base";
   @import "modules/messaging/light";
   @import "modules/messaging/dense";
+  @import "modules/messaging/overlay";
   @import "modules/messaging/banners";
   @import "modules/messaging/attachments";
   @import "modules/messaging/quotes";
