Add styles for help modal (fixes #66)

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -64,6 +64,7 @@
   @import "modules/modals/share";
   @import "modules/modals/quick-search";
   @import "modules/modals/call";
+  @import "modules/modals/help";
 
   @import "modules/tooltips/base";
   @import "modules/tooltips/coachmarks";
