Make code selections visible

--- a/scss/modules/messaging/_code.scss
+++ b/scss/modules/messaging/_code.scss
@@ -34,6 +34,10 @@ code {
   border: 1px solid $color-shade-dark;
   color: $base-font-color;
 
+  pre {
+    background: transparent;
+  }
+
   div.CodeMirror-cursor {
     border-left: 1px solid $base-font-color;
   }
@@ -179,11 +183,11 @@ div.CodeMirror span {
 }
 
 .CodeMirror-selected {
-  background: $color-base;
+  background: $color-shade-lightest;
 }
 
 .CodeMirror-focused .CodeMirror-selected {
-  background: $color-base;
+  background: $color-shade-lightest;
 }
 
 .cm-searching {
