--- a/scss/modules/messaging/_code.scss
+++ b/scss/modules/messaging/_code.scss
@@ -35,7 +35,7 @@ code {
   color: $base-font-color;
 
   pre {
-    background: transparent;
+    background: transparent !important;
   }
 
   div.CodeMirror-cursor {
