--- a/css/variants/aubergine.css
+++ b/css/variants/aubergine.css
@@ -17,16 +17,16 @@
   ::-webkit-scrollbar-thumb { background: #61485e !important; }
   ::-webkit-scrollbar-corner { background: #3e313c !important; }
   ::-webkit-scrollbar-thumb, ::-webkit-scrollbar-track { color: #3e313c !important; }
-  .feature_indigenous_scroll #messages_container::after { background: none !important; }
+  .supports_custom_scrollbar #messages_container::after { background: none !important; }
   #col_channels_collapse_view { background: #4d394b; }
   #col_channels { background: #4d394b; color: #f0d9ed; }
   #col_channels ul li.channel.active a.channel_name, #col_channels ul li.group.active a.group_name, #col_channels ul li.member.active a.im_name { background: #61485e; color: #f0d9ed; }
   #col_channels.channels_list_holder ul li.channel.active .unread_highlight, #col_channels.channels_list_holder ul li.group.active .unread_highlight, #col_channels.channels_list_holder ul li.member.active .unread_highlight { background: #3e313c; color: #f0d9ed; }
-  .channels_list_holder h2 { color: #a3839f; }
-  .channels_list_holder h2.hoverable:not(.jquery_hover):hover { color: #d4bbd1; }
-  .channels_list_holder ul { color: #f0d9ed; }
+  .channels_list_holder h2 { color: #f0d9ed !important; }
+  .channels_list_holder h2.hoverable:not(.jquery_hover):hover { color: #f0d9ed; opacity: 0.8; }
+  .channels_list_holder ul { color: #f0d9ed !important; }
   .channels_list_holder ul li { text-shadow: 0 1px 1px rgba(0, 0, 0, 0.15); }
-  .channels_list_holder ul li a { color: #a3839f; }
+  .channels_list_holder ul li a { color: #f0d9ed !important; }
   .channels_list_holder ul li a:hover { background: #3e313c !important; border-bottom-right-radius: 0.25rem; border-top-right-radius: 0.25rem; }
   .channels_list_holder ul li.channel.active a.channel_name .prefix { color: #a3839f; }
   .channels_list_holder ul li.group.active a.group_name .prefix { color: #a3839f; }
@@ -58,7 +58,7 @@
   #list_browser .item_purpose { color: #f0d9ed; }
   #list_browser_dialog .modal-footer a { color: #a3839f; }
   #list_browser_dialog .modal-footer a:hover { color: #d4bbd1; }
-  #channel_list_invites_link { border-bottom: 1px dotted #a3839f; color: #a3839f; font-size: 0.9rem; }
+  #channel_list_invites_link { border-bottom: 1px dotted #a3839f; color: #a3839f !important; font-size: 0.9rem; }
   #channel_list_invites_link:hover { border-bottom: 1px solid #a3839f; }
   #quick_switcher_btn { background: #4d394b; border-top: 2px solid #4d394b; }
   #quick_switcher_btn > i { color: #a3839f; }
@@ -100,10 +100,12 @@
   .uneditable-input:focus, .uneditable-textarea:focus { border-color: rgba(135, 100, 132, 0.8); box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(135, 100, 132, 0.6); }
   textarea { background-color: #61485e; border: 1px solid #372c36; color: #f0d9ed; }
   textarea:focus { border-color: rgba(135, 100, 132, 0.8); box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(135, 100, 132, 0.6); }
-  ::-webkit-input-placeholder { color: #f0d9ed; }
-  ::-moz-placeholder { color: #f0d9ed; }
-  input::-moz-placeholder, textarea::-moz-placeholder { color: #f0d9ed; }
-  input::-webkit-input-placeholder, textarea::-webkit-input-placeholder { color: #f0d9ed; }
+  ::-webkit-input-placeholder { color: #f0d9ed; -webkit-filter: none; filter: none; opacity: 0.5; }
+  ::-moz-placeholder { color: #f0d9ed; filter: none; opacity: 0.5; }
+  ::placeholder { color: #f0d9ed; filter: none; opacity: 0.5; }
+  input::-webkit-input-placeholder, textarea::-webkit-input-placeholder { color: #f0d9ed; -webkit-filter: none; filter: none; opacity: 0.5; }
+  input::-moz-placeholder, textarea::-moz-placeholder { color: #f0d9ed; filter: none; opacity: 0.5; }
+  input::placeholder, textarea::placeholder { color: #f0d9ed; filter: none; opacity: 0.5; }
   input[disabled], input[readonly], textarea[disabled], textarea[readonly] { background-color: #61485e !important; }
   .form-actions { background-color: #4a3b49; border-top: 1px solid #4d394b; }
   .help-block, .help-inline { color: #a3839f; }
@@ -179,6 +181,9 @@
   .filter_select.default_style .fsl_paginate .fsl_paginate_back, .filter_select.default_style .fsl_paginate_forward { color: #f0d9ed; }
   #message-input.offline, #message-input.disabled { background-color: #4d394b !important; }
   #message-input-message { color: #a3839f; }
+  #messages-input-container #message-input.msg_input_placeholder::-webkit-input-placeholder { color: #f0d9ed; -webkit-filter: none; filter: none; opacity: 0.5; }
+  #messages-input-container #message-input.msg_input_placeholder::-moz-placeholder { color: #f0d9ed; filter: none; opacity: 0.5; }
+  #messages-input-container #message-input.msg_input_placeholder::placeholder { color: #f0d9ed; filter: none; opacity: 0.5; }
   #message_edit_form #message-input, #messages-input-container #message-input { background: padding-box #61485e; border: 2px solid #4a3b49; border-left: 0; color: #f0d9ed; }
   #message_edit_form #message-input:focus, #messages-input-container #message-input:focus { border-color: #4d394b; }
   #message_edit_form .emo_menu, #messages-input-container .emo_menu { color: rgba(240, 217, 237, 0.3); }
@@ -193,6 +198,7 @@
   #footer.disabled #message-input { background: padding-box #4d394b !important; border: 2px solid #4d394b !important; }
   #footer_archives_table { color: #a3839f; }
   #typing_text { color: #a3839f; }
+  #notification_bar.wide #typing_text.msg_input_placeholder { -webkit-filter: none; filter: none; }
   #special_formatting_text { color: #a3839f; }
   .ts_toggle .ts_toggle_button { background: #372c36; color: #f0d9ed; }
   .ts_toggle .ts_toggle_button .ts_toggle_handle { background: #4d394b; }
@@ -231,6 +237,7 @@
   #team_menu.active #current_user_name, #team_menu:hover #current_user_name { color: #f0d9ed; }
   #team_menu i { color: #a3839f; }
   #team_menu .presence .presence_icon { text-shadow: 0 1px 1px rgba(0, 0, 0, 0.15); }
+  #team_menu .team_name_caret, #team_menu .notifications_menu_btn { color: #f0d9ed !important; }
   #team_header_user_name { color: #a3839f; }
   #menu.team_menu { box-shadow: 0 3px 8px rgba(0, 0, 0, 0.25); }
   #menu.team_menu ul li.highlighted > a, #menu.team_menu:not(.keyboard_active) ul li:hover > a { background: #61485e; color: #d4bbd1; }
@@ -666,7 +673,7 @@
   .snippet_preview pre, .snippet_body pre { color: #f0d9ed !important; }
   .file_container .CodeMirror .CodeMirror-code > div::before, .file_container .CodeMirror .sssh-line::before, .file_container .sssh-code .CodeMirror-code > div::before, .file_container .sssh-code .sssh-line::before { background-color: #4d394b; border-right: 1px solid #4d394b; color: #a3839f; }
   .CodeMirror { background: #372c36; border: 1px solid #4d394b; color: #f0d9ed; }
-  .CodeMirror pre { background: transparent; }
+  .CodeMirror pre { background: transparent !important; }
   .CodeMirror div.CodeMirror-cursor { border-left: 1px solid #f0d9ed; }
   .CodeMirror.cm-fat-cursor div.CodeMirror-cursor { background: #f0d9ed; }
   .CodeMirror .CodeMirror-gutters { background-color: #4d394b; border-right: 1px solid #3e313c; }
