Fix flexpane toolbar selector

--- a/scss/modules/flexpane/_base.scss
+++ b/scss/modules/flexpane/_base.scss
@@ -58,7 +58,7 @@
     }
   }
 
-  .toolbar {
+  .toolbar_container {
     background: $color-base;
   }
 
@@ -96,7 +96,7 @@
   }
 }
 
-.toolbar {
+.toolbar_container {
   background: $color-base;
   border-bottom: 1px solid $color-shade-darkest;
   color: $base-font-color;
