Add styles for channel preferences modal

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -54,6 +54,7 @@
   @import "modules/emojis/reactions";
 
   @import "modules/modals/base";
+  @import "modules/modals/channel";
   @import "modules/modals/channels";
   @import "modules/modals/direct-messages";
   @import "modules/modals/file";
