Add styles for keyboard shortcuts modal

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -66,6 +66,7 @@
   @import "modules/modals/quick-search";
   @import "modules/modals/call";
   @import "modules/modals/help";
+  @import "modules/modals/keyboard-shortcuts";
 
   @import "modules/tooltips/base";
   @import "modules/tooltips/coachmarks";
